3-expose-the-online-boutique-store-securely-on-an-https-port/frontend-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: frontend-gateway
  namespace: online-boutique
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: online-boutique-tls-credential
      hosts:
      - "marketplace.boutiquestore.com"
    - port:
        name: http
        number: 80
        protocol: HTTP
      hosts:
      - "*"
